// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Option
  data={
    {
      "isDisabled": false,
      "label": "Profile 1",
      "language": "Java",
      "value": "profile-1",
    }
  }
>
  <div>
    <DisableableSelectOption
      disableTooltipOverlay={[Function]}
      disabledReason="project_quality_profile.add_language_modal.no_active_rules"
      option={
        {
          "isDisabled": false,
          "label": "Profile 1",
          "language": "Java",
          "value": "profile-1",
        }
      }
    />
  </div>
</Option>
`;

exports[`tooltip should render correctly: default 1`] = `
<React.Fragment>
  <p>
    project_quality_profile.add_language_modal.profile_unavailable_no_active_rules
  </p>
  <ForwardRef(Link)
    to={
      {
        "pathname": "/profiles/show",
        "search": "?name=Profile+1&language=Java",
      }
    }
  >
    project_quality_profile.add_language_modal.go_to_profile
  </ForwardRef(Link)>
</React.Fragment>
`;

exports[`tooltip should render correctly: no link 1`] = `
<React.Fragment>
  <p>
    project_quality_profile.add_language_modal.profile_unavailable_no_active_rules
  </p>
</React.Fragment>
`;
